welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not found: value SetCouleurBrosse
		avance();SetCouleurBrosse() = c; baisseBrosse();leveBrosse()
                         ^MethodsPicture:12: error: not enough arguments for method FaireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	{ FaireV(); gauche()}
                ^