welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {

def FaireMotif() {
	def FaireV(c:Color) {
		avance();SetCouleurBrosse() = c; baisseBrosse();leveBrosse()
		avance(); gauche(); avance(); baisseBrosse(); leveBrosse()
		recule(); droite(); avance(); baisseBrosse;leveBrosse()
		avance()
	}
	for (i <- 1 to 4)
	{ FaireV(); gauche()}
	avance(5)}
	for (i <- 1 to 3)
 {for (y <- 1 to 3)
 	{FaireMotif()}
 	gauche();avance(5);droite()}

} 
